--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -103,9 +103,23 @@
             color: #FFF;
             cursor: pointer;
 
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            .teamName {
+                display: inline-block;
+                width: 93px;
+                line-height: 42px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+
+            .vs {
+                display: inline-block;
+                width: 10px;
+                line-height: 42px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
         }
 
         .favorite {
