--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -57,6 +57,56 @@
         padding: 0 20px;
     }
 
+    table.singleRow2Cols {
+        width: 100%;
+        border-collapse: separate;
+        table-layout: fixed;
+        border-spacing: 0;
+        text-align: center;
+        border: 1px solid #4a7fb3;
+        border-radius: 0;
+        @extend .font-text;
+        font-size: 14px;
+
+        .header {
+            height: 25px;
+            background-color: #2d405c;
+
+            .selection {
+                color: #99ccff;
+                font-weight: normal;
+                font-size: 14px;
+                width: 318px;
+            }
+
+            .separator {
+                width: 1px;
+            }
+        }
+
+        .row {
+            height: 42px;
+
+            .separator {
+                background-color: #2d405c;
+            }
+
+            .selection {
+                background-color: #536883;
+
+                &.odd {
+                    background-color: #607d8b;
+                }
+            }
+
+            .handicap {
+                color: #99ccff;
+                font-weight: bold;
+                background-color: #1e293e;
+            }
+        }
+    }
+
     table.singleRow3Cols {
         width: 100%;
         border-collapse: separate;
@@ -95,7 +145,7 @@
                 background-color: #536883;
 
                 &.odd {
-                    background-color: #2d415c;
+                    background-color: #607d8b;
                 }
             }
 
@@ -145,7 +195,7 @@
                 background-color: #536883;
 
                 &.odd {
-                    background-color: #2d415c;
+                    background-color: darken(#536883, 5%);
                 }
             }
 
@@ -206,7 +256,7 @@
                 background-color: #536883;
 
                 &.odd {
-                    background-color: #2d415c;
+                    background-color: darken(#536883, 5%);
                 }
             }
 
