Usar o outcome_id invés do outcomes.id #52

--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -159,6 +159,14 @@
                 .total {
                     font-weight: bold;
                 }
+
+                .market {
+                    display: inline-block;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    max-width: 220px;
+                }
             }
         }
 
