--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -755,6 +755,12 @@
       color: #99cc00; }
     .betslip > .content .bets .row .total {
       font-weight: bold; }
+    .betslip > .content .bets .row .market {
+      display: inline-block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-width: 220px; }
   .betslip > .content .noBets {
     font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
     font-size: 12px;
