--- a/resources/assets/sass/sportsMenu/fixturesMenu.scss
+++ b/resources/assets/sass/sportsMenu/fixturesMenu.scss
@@ -21,8 +21,8 @@
         .game {
             display: table-cell;
             cursor: pointer;
-            width: 155px;
-            max-width: 155px;
+            width: 140px;
+            max-width: 145px;
             vertical-align: middle;
 
             white-space: nowrap;
@@ -37,9 +37,10 @@
 
         .matchState {
             display: table-cell;
-            width: 50px;
+            width: 65px;
             text-align: right;
             padding-right: 15px;
+            font-size: 12px;
         }
     }
 
