--- a/resources/assets/sass/sportsMenu/fixturesMenu.scss
+++ b/resources/assets/sass/sportsMenu/fixturesMenu.scss
@@ -41,6 +41,7 @@
             text-align: right;
             padding-right: 15px;
             font-size: 12px;
+            cursor: pointer;
         }
     }
 
