--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -106,20 +106,18 @@
 
             .teamName {
                 display: inline-block;
-                width: 93px;
                 line-height: 42px;
                 white-space: nowrap;
                 overflow: hidden;
-                text-overflow: ellipsis;
             }
 
             .vs {
                 display: inline-block;
-                width: 10px;
+                text-align: center;
+                width: 13px;
                 line-height: 42px;
                 white-space: nowrap;
                 overflow: hidden;
-                text-overflow: ellipsis;
             }
         }
 
