--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -104,22 +104,14 @@
             color: #FFF;
             cursor: pointer;
 
-            .teamName {
+            .gameName {
                 display: inline-block;
-                width: 93px;
+                max-width: 205px;
                 line-height: 42px;
                 white-space: nowrap;
+                word-wrap: break-word;
                 overflow: hidden;
                 text-overflow: ellipsis;
-            }
-
-            .vs {
-                display: inline-block;
-                text-align: center;
-                width: 13px;
-                line-height: 42px;
-                white-space: nowrap;
-                overflow: hidden;
             }
         }
 
