Adicionar disclaimer às estatísticas ref #85

--- a/resources/assets/sass/statistics/statistics.scss
+++ b/resources/assets/sass/statistics/statistics.scss
@@ -24,4 +24,12 @@
         width: 100%;
         border: 0;
     }
+
+    p {
+        font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+        font-size: 11px;
+        color: #fff;
+        padding-right: 10px;
+        text-align: justify;
+    }
 }
