Adicionar rollover às competições ref #85

--- a/resources/assets/sass/sportsMenu/competitionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/competitionsMenu.scss
@@ -18,4 +18,10 @@
             float: right;
         }
     }
+
+    .competition:hover {
+        background: #FFF;
+        color: #101928;
+    }
+
 }
