--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -418,6 +418,13 @@
   width: 100%;
   border: 0; }
 
+.statistics p {
+  font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+  font-size: 11px;
+  color: #fff;
+  padding-right: 10px;
+  text-align: justify; }
+
 .terminalVerifier {
   position: fixed;
   top: 0;
@@ -511,6 +518,10 @@
     margin-top: 4px;
     font-size: 14px;
     float: right; }
+
+.sportsMenu .competition:hover {
+  background: #FFF;
+  color: #101928; }
 
 .sportsMenu .fixture {
   display: table;
