Rollover nos jogos em direto ref #85

--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -556,6 +556,10 @@
     font-size: 12px;
     cursor: pointer; }
 
+.sportsMenu .fixture:hover {
+  color: #101928;
+  background: #FFF; }
+
 .fixtures {
   width: 100%;
   border-collapse: separate;
