--- a/public/assets/portal/css/register.css
+++ b/public/assets/portal/css/register.css
@@ -1,6 +1,10 @@
 .register {
   border: 2px solid #ff9900;
   border-radius: 6px; }
+  .register i {
+    opacity: 0.2 !important;
+    filter: alpha(opacity=50) !important;
+    /* For IE8 and earlier */ }
   .register > .header {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     line-height: 40px;
@@ -63,16 +67,8 @@
             float: left;
             padding-top: 5px;
             background-color: #FFF; }
-            .register > .content > .row > .column > .row .field input[type="text"] {
-              float: left;
-              border: 1px solid black;
-              border-radius: 6px !important;
-              width: 171px; }
-            .register > .content > .row > .column > .row .field input[type="password"] {
-              float: left;
-              border: 1px solid black;
-              border-radius: 6px !important;
-              width: 171px; }
+            .register > .content > .row > .column > .row .field input[type="text"],
+            .register > .content > .row > .column > .row .field input[type="password"],
             .register > .content > .row > .column > .row .field input[type="email"] {
               float: left;
               border: 1px solid black;
@@ -80,9 +76,9 @@
               width: 171px; }
             .register > .content > .row > .column > .row .field select {
               float: left;
+              border-radius: 6px !important;
               border: 1px solid lightgray !important;
               height: 20px;
-              border-radius: 6px !important;
               min-width: 50px;
               background-color: #FFF;
               width: 171px; }
@@ -106,21 +102,9 @@
             float: left;
             padding-top: 0px;
             background-color: #FFF; }
-            .register > .content > .row > .column > .row .fieldTop input[type="text"] {
-              float: left;
-              border: 1px solid black;
-              border-radius: 6px !important;
-              width: 171px; }
-            .register > .content > .row > .column > .row .fieldTop input[type="checkbox"] {
-              float: left;
-              border: 1px solid black;
-              border-radius: 6px !important;
-              width: 171px; }
-            .register > .content > .row > .column > .row .fieldTop input[type="password"] {
-              float: left;
-              border: 1px solid black;
-              border-radius: 6px !important;
-              width: 171px; }
+            .register > .content > .row > .column > .row .fieldTop input[type="text"],
+            .register > .content > .row > .column > .row .fieldTop input[type="checkbox"],
+            .register > .content > .row > .column > .row .fieldTop input[type="password"],
             .register > .content > .row > .column > .row .fieldTop input[type="email"] {
               float: left;
               border: 1px solid black;
@@ -199,6 +183,10 @@
 .register_step2 {
   border: 2px solid #ff9900;
   border-radius: 6px; }
+  .register_step2 i {
+    opacity: 0.2 !important;
+    filter: alpha(opacity=50) !important;
+    /* For IE8 and earlier */ }
   .register_step2 > .header {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     line-height: 40px;
@@ -284,7 +272,7 @@
 .register_step3 {
   border: 2px solid #ff9900;
   border-radius: 6px; }
-  .register_step3 > .header {
+  .register_step3 .header {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     line-height: 40px;
     vertical-align: middle;
@@ -293,57 +281,59 @@
     color: #FFF;
     background-color: #ff9900;
     padding: 0px 20px; }
-    .register_step3 > .header i {
+    .register_step3 .header i {
       float: right;
       line-height: 44px;
       margin-left: 15px; }
-      .register_step3 > .header i .fa-times {
+      .register_step3 .header i .fa-times {
         font-size: 18px; }
-    .register_step3 > .header i:hover {
+    .register_step3 .header i:hover {
       cursor: pointer; }
-  .register_step3 > .content {
-    padding: 8px;
-    background-color: white; }
-    .register_step3 > .content > .header .step {
-      float: left;
-      line-height: 44px;
-      width: 50%;
-      background-color: #CCC;
-      text-align: center;
+  .register_step3 .content {
+    padding: 8px 40px;
+    background-color: white;
+    font-family: 'Open Sans', 'Droid Sans', sans-serif; }
+    .register_step3 .content .title {
       font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-      font-size: 18px;
-      color: #FFF;
-      border-right: 1px solid #FFF; }
-      .register_step3 > .content > .header .step.selected {
-        background-color: #fff; }
-    .register_step3 > .content > .icon {
+      text-align: center;
+      font-weight: bold;
+      color: #666;
+      padding: 10px 0;
+      font-size: 17px; }
+    .register_step3 .content > .icon {
       text-align: center; }
-    .register_step3 > .content .fa {
+    .register_step3 .content .fa {
       font-size: 1.5em;
       padding-top: 40px;
       color: #4b802a; }
-    .register_step3 > .content > .header {
-      padding-top: 30px;
-      padding-left: 70px;
-      padding-right: 70px;
-      padding-bottom: 50px;
+    .register_step3 .content .message {
       text-align: center;
       font-family: 'Open Sans', 'Droid Sans', sans-serif;
       font-size: 16px;
       color: #666666; }
-  .register_step3 > .footer {
+    .register_step3 .content .icons {
+      font-size: 12px; }
+    .register_step3 .content .field {
+      padding: 10px 0;
+      font-size: 13px;
+      color: #666; }
+      .register_step3 .content .field input {
+        color: #666;
+        width: 100%;
+        border-radius: 5px; }
+  .register_step3 .footer {
     overflow: auto;
     padding: 12px;
     background-color: white;
     padding-bottom: 15px;
     padding-left: 16px; }
-    .register_step3 > .footer .header {
+    .register_step3 .footer .header {
       text-align: center;
       font-weight: bold;
       font-family: 'Open Sans', 'Droid Sans', sans-serif;
       font-size: 18px;
       color: #666666; }
-    .register_step3 > .footer .actions button {
+    .register_step3 .footer .actions button {
       font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
       font-weight: bold;
       font-size: 15px;
@@ -355,7 +345,9 @@
       border: none;
       border-radius: 6px;
       width: 110px; }
-      .register_step3 > .footer .actions button.submit {
+      .register_step3 .footer .actions button.deposit {
+        background: #fea900; }
+      .register_step3 .footer .actions button.finish {
         background: #71aa30; }
 
 /*# sourceMappingURL=register.css.map */
